--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <div id="title"></div>
     <div id="app"></div>
     <div id="room"></div>
+    <div id="waiting"></div>
 
     <script type="module" src="src/index.ts"></script>
   </body>
